<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CallAssistant</string>
    <string name="text_normal">%1$s %2$s %3$s</string>
    <string name="text_poi">%1$s %2$s %3$s %4$s</string>
    <string name="text_report">%1$s %2$s %3$s, tagged by %4$d users as %5$s</string>
    <string name="close_float_window">Tap to hide the float window</string>
    <string name="action_settings">Settings</string>
    <string name="action_float_window">Float window position</string>
    <string name="float_window_hint">Drag to move</string>
    <string name="dialpad_hint">Enter number</string>
    <string name="dial">Dial</string>
    <string name="dial_number">Dial %1$s</string>
    <string name="action_call_back">Call back</string>
    <string name="action_search">Search</string>
    <string name="action_overflow">More options</string>
    <string name="search_hint">Search phone number&#8230;</string>
    <string name="no_history">No incoming call log</string>
    <string name="unknown">No data</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_error">Loading failed</string>
    <string name="color">Color</string>
    <string name="color_normal">Normal number</string>
...
    <string name="window_transparent">Transparency</string>
    <string name="window_text_size">Font size</string>
    <string name="window_close_anim">Animation on hide</string>
    <string name="text_size">Drag to change font size.</string>
    <string name="text_transparent">Drag to change transparency.</string>
    <string name="window_trans_back_only">Transparency only applies for background</string>
    <string name="close_window">Hide float window</string>
    <string name="undo">undo</string>
    <string name="deleted">Deleted</string>
    <string name="api_baidu">BAIDU Phone Number Service</string>
    <string name="ignore_known_contact">Ignore calls from contact list</string>
    <string name="display_on_outgoing">Show on outgoing calls</string>
    <string name="fetch">Fetch</string>
    <string name="baidu_api_url" translatable="false">http://apistore.baidu.com/astore/usercenter
    </string>
...
    <string name="api_key_hint">API key</string>
    <string name="hide_when_touch">Hide on tap</string>
    <string name="contact_offline">Show contact location when offline</string>
    <string name="online_failed">Online fetch failed</string>
    <string name="offline_failed">Number not found in offline data</string>
    <string name="window_visibility">Show and hide</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_clear_history">Clear call log</string>
    <string name="clear_history_message">Clear all call logs?</string>
    <string name="ring_once">Ring once</string>
    <string name="empty_string" translatable="false" />
    <string name="baidu_advertising" translatable="false">百度糯米</string>
    <string name="window_text_alignment">Window text alignment</string>
    <string name="align_left">Align left</string>
    <string name="align_center">Align center</string>
...
    <string name="offline_data_upgrade_failed">Offline data upgrade failed</string>
    <string name="offline_data_version_summary">Version %1$d, count %2$d, updated at %3$s</string>
    <string name="offline_data_auto_upgrade">Automatic offline data update</string>
    <string name="offline_data_check_now">Update offline data now</string>
    <string name="offline_data_checking">Checking for updates, please wait a moment</string>
    <string name="no_offline_data">No offline data</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="clear_cache_message">Cache cleared</string>
    <string name="more">More</string>
    <string name="source_special">Special number</string>
    <string name="source_common">Common number</string>
    <string name="source_caller">CallerInfo number</string>
    <string name="source_marked">Marked number</string>
    <string name="source_mvno">Mobile virtual network operator</string>
...
    <string name="source_google">Google offline data</string>
    <string name="source_custom">Custom database</string>
    <string name="modify_mark">Modify mark</string>
    <string name="clear_mark">Clear mark</string>
    <string name="custom">Custom</string>
    <string name="custom_tag_hint">Add custom tag</string>
    <string name="clear_cache_confirm_message">Clear all caller cache?</string>
    <string name="custom_db">Custom phone database</string>
    <string name="custom_db_status">Import status</string>
    <string name="custom_db_import">Import database</string>
    <string name="custom_db_imported">Imported</string>
    <string name="custom_db_not_imported">Not imported</string>
    <string name="custom_db_import_success">Custom database imported successfully</string>
...
