...
                android:maxLines="1"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="13sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="13sp"/>

...
